--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom Scrollbar Styles for Chrome */
+.scrollable-table {
+    overflow-y: auto;
+  }
+  
+  /* Webkit Scrollbars */
+  .scrollable-table::-webkit-scrollbar {
+    width: 4px; /* Adjust scrollbar width to be narrower */
+  }
+  
+  .scrollable-table::-webkit-scrollbar-thumb {
+    background-color: #d1d5db; /* Scrollbar thumb color */
+    border-radius: 8px; /* Make the scrollbar thumb more rounded */
+  }
+  
+  .scrollable-table::-webkit-scrollbar-track {
+    background-color: #f3f4f6; /* Scrollbar track color */
+  }
+  
+  /* Hide scroll buttons */
+  .scrollable-table::-webkit-scrollbar-button {
+    display: none; /* Hide up and down arrows */
+  }
+  
