--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 /* Custom Scrollbar Styles for Webkit */
+/* Custom Scrollbar Styles for Webkit */
 ::-webkit-scrollbar {
   width: 4px;
 }
@@ -20,12 +21,16 @@
   display: none;
 }
 
-
-/* styles.css or similar */
-.action-button {
-  margin-right: 8px; /* Adjust the gap as needed */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
-.action-button:last-child {
-  margin-right: 0; /* No margin for the last button */
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top: 4px solid white;
+  width: 24px;
+  height: 24px;
+  animation: spin 1s linear infinite;
 }
